Alignment fix:

--- a/src/assets/css/dropdown.css
+++ b/src/assets/css/dropdown.css
@@ -7,9 +7,9 @@
     height: auto; 
     background-color: #E9E9E9;
     font-size: 1.1em;
-    width:8em;
+    width:8.5em;
     margin-left:11em;
-    margin-top: 0.4em;
+    margin-top: 0.27em;
     display:block;
     position:absolute;
     padding: 0;
@@ -26,7 +26,7 @@
     /*  When toggled via jQuery this class will reduce the height of the ul which inconjuction
         with overflow: hidden set on the ul will hide all list items apart from the first */
     /* current li height 38px + 5px border */
-    height: 25px;
+    height: 29px;
     border-radius: 0.25em;
   }
   
@@ -37,7 +37,7 @@
     text-decoration: none;
     cursor: pointer;
     user-select: none;
-    padding: 2px; /* Larger touch target area */
+    padding: 4px; /* Larger touch target area */
   }
   
   .drop-down li:first-child a:after {
