--- a/src/assets/css/skillsComponent.css
+++ b/src/assets/css/skillsComponent.css
@@ -50,7 +50,7 @@
   position: relative;
   cursor:pointer;
   background-color: #e9e9e9;
-  margin-right: 0.75em;
+  margin-right: 0.7em;
   font-size: 1.1em;
   padding: 4px 12px 4px 7px;
   border-radius: 0.25rem;
@@ -118,20 +118,20 @@
 .arrowUp:after{
   content: "\2191";
   display:inline-table;
-  margin-left:0.3em;
+  margin-left:0.2em;
  
 
 }
 
 .arrowDown:after{
   content: "\2193";
-  margin-left:0.3em;
+  margin-left:0.2em;
 
 }
 
 .arrowNone:after{
   content: "\2193";
-  margin-left:0.3em;
+  margin-left:0.2em;
   visibility: hidden;
 }
 
